welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:7: error: constructor cannot be instantiated to expected type;
 found   : (T1, T2)
 required: (Int, Boolean, Int)
		case (_,_) => return die1+die2
                     ^